--- a/package.json
+++ b/package.json
@@ -4,22 +4,26 @@
   "description": "A riff on the ever-popular game, Wordle",
   "keywords": [],
   "main": "src/index.js",
+  "scripts": {
+    "start": "webpack serve --port 3000 --open --hot --mode development",
+    "build": "webpack --mode production"
+  },
   "dependencies": {
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "2.0.9",
-    "react-jss": "10.9.0",
-    "react-scripts": "4.0.0"
+    "react-jss": "10.9.0"
   },
   "devDependencies": {
-    "@babel/runtime": "7.13.8",
-    "typescript": "4.1.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.3",
+    "core-js": "^3.20.3",
+    "html-webpack-plugin": "^5.5.0",
+    "webpack": "^5.67.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.3"
   },
   "browserslist": [
     ">0.2%",
