--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "wordle-clone-js-exercise",
+  "name": "wordle-riff-exercise",
   "version": "0.0.1",
   "description": "A riff on the ever-popular game, Wordle",
   "keywords": [],
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x"
+  },
   "main": "src/index.js",
+  "proxy": "localhost:5000",
   "scripts": {
     "start": "webpack serve --port 3000 --open --hot --mode development",
+    "start:heroku": "npm i && webpack serve --open --mode production",
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "express": "^4.17.2",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "2.0.9",
@@ -16,10 +24,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
     "core-js": "^3.20.3",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2",
