--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.3.1",
     "express": "^4.17.2",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
@@ -36,6 +39,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2",
