--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "main": "src/index.js",
   "proxy": "localhost:5000",
   "scripts": {
+    "serve": "npm run build && cross-env PORT=8080 node server.js",
+    "serve:dev": "concurrently \"npm run build:watch\" \"nodemon server.js\"",
     "start": "webpack serve --mode development",
     "start:heroku": "npm i && npm run build",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "build:watch": "webpack --watch --mode development"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -33,7 +36,9 @@
     "@babel/preset-react": "^7.16.7",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
+    "concurrently": "^7.0.0",
     "core-js": "^3.20.3",
+    "cross-env": "^7.0.3",
     "eslint": "^8.8.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.4",
@@ -41,6 +46,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.5.0",
+    "nodemon": "^2.0.15",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.3"
