--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-feather": "2.0.9",
-    "react-jss": "10.9.0"
+    "react-feather": "2.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
