--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.3.1",
     "cross-env": "^7.0.3",
+    "date-fns": "^2.28.0",
     "express": "^4.17.2",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-feather": "2.0.9"
+    "react-feather": "2.0.9",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
