--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
     "start": "webpack serve --mode development"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@mui/material": "^5.3.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.7",
     "cross-env": "^7.0.3",
     "date-fns": "^2.28.0",
     "express": "^4.17.2",
     "prop-types": "^15.8.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-feather": "2.0.9",
-    "react-router-dom": "^6.2.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
+    "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
@@ -36,7 +36,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.3",
+    "babel-loader": "^9.1.2",
     "babel-plugin-styled-components": "^2.0.2",
     "concurrently": "^7.0.0",
     "core-js": "^3.20.3",
@@ -48,9 +48,9 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.15",
-    "webpack": "^5.67.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.3"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
   "browserslist": [
     ">0.2%",
