--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "build:watch": "webpack --watch --mode development",
     "heroku:serve": "node server.js",
     "serve:dev": "concurrently \"npm run build:watch\" \"nodemon server.js\"",
-    "start": "webpack serve --mode development"
+    "start": "webpack serve --mode development",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.7",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "cross-env": "^7.0.3",
     "date-fns": "^2.28.0",
     "express": "^4.18.2",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,6 +48,7 @@
     "eslint": "^8.8.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
