--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "serve": "node server.js",
     "serve:dev": "concurrently \"npm run build:watch\" \"nodemon server.js\"",
     "start": "webpack serve --mode development",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
