--- a/.github/workflows/commit-tests.yml
+++ b/.github/workflows/commit-tests.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Run unit tests
+name: Universal checks
 
 on:
   push:
@@ -12,8 +12,7 @@ on:
       - 'main'
 
 jobs:
-  test:
-
+  unit-tests:
     runs-on: ubuntu-latest
 
     strategy:
@@ -30,3 +29,14 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run test:ci
+  linting:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Lint all source
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18.x
+    - run: npm ci
+    - run: npm run lint
