--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,15 @@
     "linebreak-style": "off",
     "no-console": "off",
     "no-prototype-builtins": "off",
-    "prettier/prettier": ["error"],
+    "prettier/prettier": [
+      "error",
+      {
+        "arrowParens": "avoid",
+        "printWidth": 100,
+        "singleQuote": true,
+        "trailingComma": "es5"
+      }
+    ],
     "react/function-component-definition": [
       "warn",
       {
