--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
       "error",
       {
         "arrowParens": "avoid",
+        "endOfLine": "auto",
         "printWidth": 100,
         "singleQuote": true,
         "trailingComma": "es5"
