--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "build": "webpack --mode production",
     "build:watch": "webpack --watch --mode development",
+    "cypress:open": "cypress open",
     "lint": "eslint . --ext .js,.jsx --report-unused-disable-directives --max-warnings 0 --cache",
     "serve": "node server.js",
     "serve:dev": "concurrently \"npm run build:watch\" \"nodemon server.js\"",
@@ -39,6 +40,7 @@
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@testing-library/cypress": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -47,9 +49,11 @@
     "babel-plugin-styled-components": "^2.0.2",
     "concurrently": "^7.0.0",
     "core-js": "^3.20.3",
+    "cypress": "^12.5.1",
     "eslint": "^8.8.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jsx-a11y": "^6.5.1",
