--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "scripts": {
     "build": "webpack --mode production",
     "build:watch": "webpack --watch --mode development",
-    "cypress:open": "cypress open",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
     "lint": "eslint . --ext .js,.jsx --report-unused-disable-directives --max-warnings 0 --cache",
     "serve": "node server.js",
+    "serve:ci": "cross-env PORT=3000 node server.js",
     "serve:dev": "concurrently \"npm run build:watch\" \"nodemon server.js\"",
     "start": "webpack serve --mode development",
     "test": "jest --watchAll",
@@ -64,6 +66,7 @@
     "jest-environment-jsdom": "^29.4.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.8.4",
+    "wait-on": "^7.0.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
