--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cy:run": "cypress run",
     "lint": "eslint . --ext .js,.jsx --report-unused-disable-directives --max-warnings 0 --cache",
     "serve": "node server.js",
-    "serve:ci": "cross-env PORT=3000 node server.js",
+    "serve:ci": "cross-env PORT=3000 pm2 start server.js & wait-on http://localhost:3000",
     "serve:dev": "concurrently \"npm run build:watch\" \"nodemon server.js\"",
     "start": "webpack serve --mode development",
     "test": "jest --watchAll",
@@ -65,6 +65,7 @@
     "html-webpack-plugin": "^5.5.0",
     "jest-environment-jsdom": "^29.4.1",
     "nodemon": "^2.0.15",
+    "pm2": "^5.2.2",
     "prettier": "^2.8.4",
     "wait-on": "^7.0.1",
     "webpack": "^5.75.0",
